// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExternalRequestOpts returns the expected object from a multipart request 1`] = `
{
  "agentOptions": {
    "rejectUnauthorized": false,
  },
  "baseUrl": "https://api.dev.meetup.com",
  "formData": {
    "foo": "bar",
  },
  "headers": {
    "accept-language": "en-US",
    "cookie": "MEETUP_MEMBER_DEV=foo member; MEETUP_CSRF_DEV=bar token",
    "csrf-token": "bar token",
    "x-meetup-agent": "TEST_AGENT ",
    "x-meetup-parent-request-id": "mock-uuid-1234",
  },
  "method": "get",
  "mode": "no-cors",
  "time": true,
  "timeout": 100,
}
`;

exports[`getExternalRequestOpts returns the expected object from a vanilla request 1`] = `
{
  "agentOptions": {
    "rejectUnauthorized": false,
  },
  "baseUrl": "https://api.dev.meetup.com",
  "headers": {
    "accept-language": "en-US",
    "cookie": "MEETUP_MEMBER_DEV=foo member; MEETUP_CSRF_DEV=bar token",
    "csrf-token": "bar token",
    "x-meetup-agent": "TEST_AGENT ",
    "x-meetup-parent-request-id": "mock-uuid-1234",
  },
  "method": "get",
  "mode": "no-cors",
  "time": true,
  "timeout": 100,
}
`;
